fixes scrollbar on veggies list

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -155,6 +155,8 @@ main {
 
 #veggie-sidebar {
     flex-basis: 25%;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 .veggie-actions {
